--- a/main.ipynb
+++ b/main.ipynb
@@ -4,13 +4,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deep Learning Framework for Predicting Himalayan Summit Success Using CNNs and RNNs\n"
+    "# Deep Learning Framework for Predicting Himalayan Summit Success \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    import torch\n",
+    "    import torchvision\n",
+    "    assert int(torch.__version__.split(\".\")[0]) >= 2, \"torch version should be 2.+\"\n",
+    "    assert int(torchvision.__version__.split(\".\")[1]) >= 15, \"torchvision version should be 0.15+\"\n",
+    "    print(f\"torch version: {torch.__version__}\")\n",
+    "    print(f\"torchvision version: {torchvision.__version__}\")\n",
+    "except:\n",
+    "    print(f\"[INFO] torch/torchvision versions not correct. Installing correct versions.\")\n",
+    "    !pip3 install -U torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu113\n",
+    "    import torch\n",
+    "    import torchvision\n",
+    "    print(f\"torch version: {torch.__version__}\")\n",
+    "    print(f\"torchvision version: {torchvision.__version__}\")\n",
+    "\n",
+    "from torch import nn\n",
+    "from torchvision import transforms\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "try:\n",
+    "    from torchinfo import summary\n",
+    "except:\n",
+    "    print(\"[INFO] Couldn't find torchinfo... installing it\")\n",
+    "    !pip install -q torchinfo\n",
+    "    from torchinfo import summary\n",
+    "\n",
+    "try:\n",
+    "    from tqdm.auto import tqdm\n",
+    "except:\n",
+    "    print(f\"[INFO] Couldnt't find tqdm... installing it \")\n",
+    "    !pip install tqdm\n",
+    "    from tqdm.auto import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    from torchinfo import summary\n",
+    "except ImportError:\n",
+    "    print(\"[INFO] Couldn't find torchinfo... installing it\")\n",
+    "    !pip install -q torchinfo\n",
+    "    from torchinfo import summary\n",
+    "\n",
+    "try:\n",
+    "    from torch.utils.tensorboard import SummaryWriter\n",
+    "except:\n",
+    "    print(\"[INFO] Couldn't find tensorboard... installing it.\")\n",
+    "    !pip install -q tensorboard\n",
+    "    from torch.utils.tensorboard import SummaryWriter\n",
+    "\n",
+    "try:\n",
+    "    import torchmetrics, mlxtend\n",
+    "    print(f\"mlextend version: {mlxtend.__version__}\")\n",
+    "    assert int(mlxtend.__version__.split(\".\")[1]) >- 19\n",
+    "except:\n",
+    "    !pip install -q torchmetrics -U mlxtend\n",
+    "    import torchmetrics, mlxtend\n",
+    "    print(f\"mlextend version: {mlxtend.__version__}\")\n",
+    "\n",
+    "try:\n",
+    "    from src import data_setup, engine, get_data, helper_functions, model_builder, train, utils\n",
+    "except ImportError:\n",
+    "    print(\"[INFO] Could not find project modules. Downloading them from GitHub.\")\n",
+    "    !git clone https://github.com/Aaron-Serpilin/DeepSummit.git\n",
+    "    !mv DeepSummit/src .\n",
+    "    !mv DeepSummit/data .\n",
+    "    !rm -rf DeepSummit\n",
+    "    from src import data_setup, engine, get_data, helper_functions, model_builder, train, utils\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python3_Env",
    "language": "python",
    "name": "python3"
   },
