Fixed duplicate splits saving directory

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,10 +9,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch version: 2.6.0\n",
+      "torchvision version: 0.21.0\n",
+      "[INFO] Couldn't find matplotlib...installing it\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Couldn't find torchinfo... installing it\n",
+      "[INFO] Couldnt't find tqdm... installing it \n",
+      "Collecting tqdm\n",
+      "  Obtaining dependency information for tqdm from https://files.pythonhosted.org/packages/d0/30/dc54f88dd4a2b5dc8a0279bdd7270e735851848b762aeb1c1184ed1f6b14/tqdm-4.67.1-py3-none-any.whl.metadata\n",
+      "  Downloading tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.7/57.7 kB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.5/78.5 kB\u001b[0m \u001b[31m5.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: tqdm\n",
+      "Successfully installed tqdm-4.67.1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/aaronserpilin/anaconda3/envs/Python3_Env/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
+    "from torch import nn\n",
+    "from torchvision import transforms\n",
+    "\n",
     "try:\n",
     "    import torch\n",
     "    import torchvision\n",
@@ -28,9 +72,13 @@
     "    print(f\"torch version: {torch.__version__}\")\n",
     "    print(f\"torchvision version: {torchvision.__version__}\")\n",
     "\n",
-    "from torch import nn\n",
-    "from torchvision import transforms\n",
-    "import matplotlib.pyplot as plt\n",
+    "try:\n",
+    "    import matplotlib.pyplot as plt\n",
+    "except ImportError:\n",
+    "    print(\"[INFO] Couldn't find matplotlib...installing it\")\n",
+    "    !pip install -q matplotlib\n",
+    "    import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "try:\n",
     "    from torchinfo import summary\n",
@@ -49,9 +97,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Coudln't find dbfread...installing it\n",
+      "[INFO] Couldn't find tensorboard... installing it.\n",
+      "mlextend version: 0.23.4\n",
+      "[INFO] Coudldn't find cdsapi...installing it.\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    from torchinfo import summary\n",
@@ -59,6 +118,14 @@
     "    print(\"[INFO] Couldn't find torchinfo... installing it\")\n",
     "    !pip install -q torchinfo\n",
     "    from torchinfo import summary\n",
+    "\n",
+    "try:\n",
+    "    from dbfread import DBF\n",
+    "except ImportError:\n",
+    "    print(\"[INFO] Coudln't find dbfread...installing it\")\n",
+    "    !pip install -q dbfread\n",
+    "    from dbfread import DBF\n",
+    "\n",
     "\n",
     "try:\n",
     "    from torch.utils.tensorboard import SummaryWriter\n",
@@ -77,6 +144,43 @@
     "    print(f\"mlextend version: {mlxtend.__version__}\")\n",
     "\n",
     "try:\n",
+    "    import cdsapi\n",
+    "except ImportError:\n",
+    "    print(\"[INFO] Coudldn't find cdsapi...installing it.\")\n",
+    "    !pip install -q cdsapi\n",
+    "    import cdsapi\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Only for Google Collab\n",
+    "# %%bash\n",
+    "# cat > /root/.cdsapirc <<EOF\n",
+    "# url: https://cds.climate.copernicus.eu/api/v2\n",
+    "# key: serpilin.aaron@gmail.com:6c4cceea-b52d-4d54-86c0-c9e314e45015\n",
+    "# verify: 0\n",
+    "# EOF\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Add the src directory to the Python path so helper_functions can be found.\n",
+    "src_path = Path.cwd() / \"src\"\n",
+    "if str(src_path) not in sys.path:\n",
+    "    sys.path.append(str(src_path))\n",
+    "\n",
+    "try:\n",
     "    from src import data_setup, engine, get_data, helper_functions, model_builder, train, utils\n",
     "except ImportError:\n",
     "    print(\"[INFO] Could not find project modules. Downloading them from GitHub.\")\n",
@@ -84,7 +188,10 @@
     "    !mv DeepSummit/src .\n",
     "    !mv DeepSummit/data .\n",
     "    !rm -rf DeepSummit\n",
-    "    from src import data_setup, engine, get_data, helper_functions, model_builder, train, utils\n"
+    "    # After moving, ensure that the src folder is still in the path.\n",
+    "    if str(src_path) not in sys.path:\n",
+    "        sys.path.append(str(src_path))\n",
+    "    from src import data_setup, engine, get_data, helper_functions, model_builder, train, utils"
    ]
   }
  ],
@@ -95,7 +202,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.4"
   }
  },
