Minor tweaks, and SAINT architecture breakdown notebook added. Equation breakdown done.

--- a/main.ipynb
+++ b/main.ipynb
@@ -172,26 +172,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "from pathlib import Path\n",
-    "\n",
-    "# Add the src directory to the Python path so helper_functions can be found.\n",
-    "src_path = Path.cwd() / \"src\"\n",
-    "if str(src_path) not in sys.path:\n",
-    "    sys.path.append(str(src_path))\n",
-    "\n",
-    "try:\n",
-    "    from src import data_setup, engine, get_data, helper_functions, model_builder, train, utils\n",
-    "except ImportError:\n",
-    "    print(\"[INFO] Could not find project modules. Downloading them from GitHub.\")\n",
-    "    !git clone https://github.com/Aaron-Serpilin/DeepSummit.git\n",
-    "    !mv DeepSummit/src .\n",
-    "    !mv DeepSummit/data .\n",
-    "    !rm -rf DeepSummit\n",
-    "    # After moving, ensure that the src folder is still in the path.\n",
-    "    if str(src_path) not in sys.path:\n",
-    "        sys.path.append(str(src_path))\n",
-    "    from src import data_setup, engine, get_data, helper_functions, model_builder, train, utils"
+    "!git clone https://github.com/Aaron-Serpilin/DeepSummit.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd DeepSummit/"
    ]
   }
  ],
