Initial implementation of SAINT/Tab Transformer attention

--- a/src/tab_transformer/tab_breakdown.ipynb
+++ b/src/tab_transformer/tab_breakdown.ipynb
@@ -14,6 +14,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Acknowledgments \n",
+    "\n",
+    "The content of the breakdown is based on the following public repos:\n",
+    "* **SAINT**: https://github.com/somepago/saint\n",
+    "\n",
+    "Similarly, various utilities from the SAINT paper were borrowed from the following repo, that will also be acknowledged:\n",
+    "* **Tab Transformer PyTorch**: https://github.com/lucidrains/tab-transformer-pytorch\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Equations\n",
     "\n",
     "The SAINT pipeline is described by the following equations found in section 3.1 of the paper. \n",
@@ -41,7 +55,7 @@
    "source": [
     "### SAINT Architecture Stages\n",
     "\n",
-    "* **Embedding function**: Converts the raw input $x_i$ into a higher-dimensional vector representation where for a given $\\mathbf{x}_{\\mathbf{i}} \\in \\mathbb{R}^{(n+1)}$, we get $\\mathbf{E}\\left(\\mathbf{x}_{\\mathbf{i}}\\right) \\in \\mathbb{R}^{(n+1) \\times d}$\n",
+    "* **Embedding function**: Converts the raw input $x_i$ into a higher-dimensional vector representation where for a given $\\mathbf{x}_{\\mathbf{i}} \\in \\mathbb{R}^{(n+1)}$, we get $\\mathbf{E}\\left(\\mathbf{x}_{\\mathbf{i}}\\right) \\in \\mathbb{R}^{(n+1) \\times d}$. It is important to covert all feature types into contextual embeddings and not separate them as in the Tab Transformers paper given that separating them prevents the continuous data from taking advantage of the self-attention block, meaning correlations between categorical and continuous data are lost. Developing a higher dimensional embedding where both feature types are included facilitates the data points to find better representations of each other.\n",
     "* **Multi-head self-attention (MSA) module**: Module used to focus on multiple parts of the input simultaneously (`torch.nn.MultiHeadAttention()`)\n",
     "* **Layer normalization (LN) layer**: Method of regularization to avoid overfitting (`torch.nn.LayerNorm()`)\n",
     "* **Feed Forward (FF) layer**:  Fully connected network that introduces non-linearity and transforms token's representations through expansions and projections of the input's dimensions to learn meaningful relationships. \n",
