--- a/main.ipynb
+++ b/main.ipynb
@@ -17,31 +17,7 @@
      "output_type": "stream",
      "text": [
       "torch version: 2.6.0\n",
-      "torchvision version: 0.21.0\n",
-      "[INFO] Couldn't find matplotlib...installing it\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] Couldn't find torchinfo... installing it\n",
-      "[INFO] Couldnt't find tqdm... installing it \n",
-      "Collecting tqdm\n",
-      "  Obtaining dependency information for tqdm from https://files.pythonhosted.org/packages/d0/30/dc54f88dd4a2b5dc8a0279bdd7270e735851848b762aeb1c1184ed1f6b14/tqdm-4.67.1-py3-none-any.whl.metadata\n",
-      "  Downloading tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.7/57.7 kB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.5/78.5 kB\u001b[0m \u001b[31m5.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: tqdm\n",
-      "Successfully installed tqdm-4.67.1\n"
+      "torchvision version: 0.21.0\n"
      ]
     },
     {
@@ -50,6 +26,13 @@
      "text": [
       "/Users/aaronserpilin/anaconda3/envs/Python3_Env/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mlextend version: 0.23.4\n"
      ]
     }
    ],
@@ -79,7 +62,6 @@
     "    !pip install -q matplotlib\n",
     "    import matplotlib.pyplot as plt\n",
     "\n",
-    "\n",
     "try:\n",
     "    from torchinfo import summary\n",
     "except:\n",
@@ -92,26 +74,8 @@
     "except:\n",
     "    print(f\"[INFO] Couldnt't find tqdm... installing it \")\n",
     "    !pip install tqdm\n",
-    "    from tqdm.auto import tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] Coudln't find dbfread...installing it\n",
-      "[INFO] Couldn't find tensorboard... installing it.\n",
-      "mlextend version: 0.23.4\n",
-      "[INFO] Coudldn't find cdsapi...installing it.\n"
-     ]
-    }
-   ],
-   "source": [
+    "    from tqdm.auto import tqdm\n",
+    "\n",
     "try:\n",
     "    from torchinfo import summary\n",
     "except ImportError:\n",
@@ -148,40 +112,118 @@
     "except ImportError:\n",
     "    print(\"[INFO] Coudldn't find cdsapi...installing it.\")\n",
     "    !pip install -q cdsapi\n",
-    "    import cdsapi\n"
+    "    import cdsapi\n",
+    "\n",
+    "try:\n",
+    "    import pandas as pd\n",
+    "except ImportError:\n",
+    "    print(\"[INFO] Couldn't find pandas... installing it\")\n",
+    "    !pip install -q pandas\n",
+    "    import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "himalayan_train_dir = Path(\"data/himalayas_data/train\")\n",
+    "himalayan_val_dir = Path(\"data/himalayas_data/val\")\n",
+    "himalayan_test_dir = Path(\"data/himalayas_data/test\")\n",
+    "\n",
+    "himalayan_train_file = himalayan_train_dir / \"train.csv\"\n",
+    "himalayan_val_file = himalayan_val_dir / \"val.csv\"\n",
+    "himalayan_test_file = himalayan_test_dir / \"test.csv\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 10 rows:\n",
+      "   SEX  CITIZEN  STATUS  MO2USED  MROUTE1  SEASON  O2USED   CALCAGE   HEIGHTM  \\\n",
+      "0    1       81      72        1        1       2       1  1.084601 -1.198266   \n",
+      "1    1      152      72        0        1       2       0  1.513284 -1.198266   \n",
+      "2    0      158      72        0        1       2       1 -0.973077 -0.171140   \n",
+      "3    1      109     264        1        1       0       1 -0.458657  0.989958   \n",
+      "4    1      190      72        1        1       0       1  2.027704 -1.118520   \n",
+      "5    1       15      72        0        1       2       1 -0.201448 -1.198266   \n",
+      "6    1       33      72        1        1       0       1  0.484445  0.989958   \n",
+      "7    0       81     288        1        0       3       1  0.570182  0.989958   \n",
+      "8    1       71      72        1        1       0       1  0.998865  0.989958   \n",
+      "9    1      141      72        0        0       2       0 -0.630130 -1.118520   \n",
+      "\n",
+      "    MDEATHS   HDEATHS  SMTMEMBERS  SMTHIRED  Target  \n",
+      "0 -0.280095 -0.166441    1.659120  0.964336       1  \n",
+      "1 -0.280095 -0.166441   -0.631075 -0.473708       0  \n",
+      "2 -0.280095 -0.166441   -0.631075 -0.617512       0  \n",
+      "3 -0.280095 -0.166441   -0.807244  0.676727       1  \n",
+      "4 -0.280095 -0.166441    0.249769 -0.186099       1  \n",
+      "5 -0.280095 -0.166441    1.482951  5.566078       1  \n",
+      "6 -0.280095 -0.166441   -0.807244 -0.617512       0  \n",
+      "7 -0.280095 -0.166441   -0.807244 -0.617512       0  \n",
+      "8 -0.280095 -0.166441    0.602106  0.964336       1  \n",
+      "9 -0.280095 -0.166441    0.073600 -0.473708       0  \n",
+      "First training instance:\n",
+      "SEX            1.000000\n",
+      "CITIZEN       81.000000\n",
+      "STATUS        72.000000\n",
+      "MO2USED        1.000000\n",
+      "MROUTE1        1.000000\n",
+      "SEASON         2.000000\n",
+      "O2USED         1.000000\n",
+      "CALCAGE        1.084601\n",
+      "HEIGHTM       -1.198266\n",
+      "MDEATHS       -0.280095\n",
+      "HDEATHS       -0.166441\n",
+      "SMTMEMBERS     1.659120\n",
+      "SMTHIRED       0.964336\n",
+      "Target         1.000000\n",
+      "Name: 0, dtype: float64\n",
+      "Instance shape:\n",
+      "(14,)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Only for Google Collab\n",
-    "# %%bash\n",
-    "# cat > /root/.cdsapirc <<EOF\n",
-    "# url: https://cds.climate.copernicus.eu/api/v2\n",
-    "# key: serpilin.aaron@gmail.com:6c4cceea-b52d-4d54-86c0-c9e314e45015\n",
-    "# verify: 0\n",
-    "# EOF\n"
+    "df_train = pd.read_csv(himalayan_train_file)\n",
+    "\n",
+    "print(f\"First 10 rows:\\n{df_train.head(10)}\")\n",
+    "print(f\"First training instance:\\n{df_train.iloc[0]}\")\n",
+    "print(f\"Instance shape:\\n{df_train.iloc[0].shape}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Basic Transform: Compose(\n",
+      "    ToTensor()\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
-    "!git clone https://github.com/Aaron-Serpilin/DeepSummit.git"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%cd DeepSummit/"
+    "from torchvision import transforms\n",
+    "\n",
+    "basic_transform = transforms.Compose([\n",
+    "    transforms.ToTensor()\n",
+    "])\n",
+    "\n",
+    "print(f\"Basic Transform: {basic_transform}\")"
    ]
   }
  ],
