TabAttention, Transformer, RowColTransformer added

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -203,45 +203,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Basic Transform: Compose(\n",
-      "    ToTensor()\n",
-      ")\n"
+      "Basic Transform: <function basic_transform at 0x1655c6520>\n"
      ]
     }
    ],
    "source": [
     "from torchvision import transforms\n",
     "\n",
-    "basic_transform = transforms.Compose([\n",
-    "    transforms.ToTensor()\n",
-    "])\n",
+    "def basic_transform (x):\n",
+    "    return torch.tensor(x, dtype=torch.float)\n",
     "\n",
     "print(f\"Basic Transform: {basic_transform}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "TabularDataset() takes no arguments",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m val_csv   = \u001b[38;5;28mstr\u001b[39m(Path(\u001b[33m\"\u001b[39m\u001b[33mdata/himalayas_data/val/val.csv\u001b[39m\u001b[33m\"\u001b[39m))\n\u001b[32m      5\u001b[39m test_csv  = \u001b[38;5;28mstr\u001b[39m(Path(\u001b[33m\"\u001b[39m\u001b[33mdata/himalayas_data/test/test.csv\u001b[39m\u001b[33m\"\u001b[39m))\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m train_dataloader, val_dataloader, test_dataloader = \u001b[43mcreate_dataloaders\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtrain_file\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtrain_csv\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[43m    \u001b[49m\u001b[43mval_file\u001b[49m\u001b[43m=\u001b[49m\u001b[43mval_csv\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     10\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtest_file\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtest_csv\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     11\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtransform\u001b[49m\u001b[43m=\u001b[49m\u001b[43mbasic_transform\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\n\u001b[32m     12\u001b[39m \u001b[43m    \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m32\u001b[39;49m\n\u001b[32m     13\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m     15\u001b[39m train_dataloader, val_dataloader, test_dataloader\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/Extra-Programming-Courses/Pytorch-Projects/DeepSummit/src/helper_functions.py:99\u001b[39m, in \u001b[36mcreate_dataloaders\u001b[39m\u001b[34m(train_file, val_file, test_file, transform, batch_size, num_workers)\u001b[39m\n\u001b[32m     88\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m     89\u001b[39m \u001b[33;03mCreates the training and testing DataLoaders.\u001b[39;00m\n\u001b[32m     90\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m     94\u001b[39m \u001b[33;03mIt returns a tuple of (train_dataloader, val_dataloader, test_dataloader). \u001b[39;00m\n\u001b[32m     95\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m     97\u001b[39m target_column = \u001b[33m\"\u001b[39m\u001b[33mTarget\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m99\u001b[39m train_data = \u001b[43mTabularDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcsv_file\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtrain_file\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget_column\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtarget_column\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtransform\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtransform\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    100\u001b[39m val_data = TabularDataset(csv_file=val_file, target_column=target_column, transform=transform)\n\u001b[32m    101\u001b[39m test_data = TabularDataset(csv_file=test_file, target_column=target_column, transform=transform)\n",
-      "\u001b[31mTypeError\u001b[39m: TabularDataset() takes no arguments"
-     ]
+     "data": {
+      "text/plain": [
+       "(<torch.utils.data.dataloader.DataLoader at 0x1655eba90>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x1655e2dd0>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x1655e3ad0>)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
