TabularDataset __init__ function done

--- a/main.ipynb
+++ b/main.ipynb
@@ -224,28 +224,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Basic Transform: <function basic_transform at 0x165a8a3e0>\n"
-     ]
-    }
-   ],
-   "source": [
-    "from torchvision import transforms\n",
-    "\n",
-    "def basic_transform (x):\n",
-    "    return torch.tensor(x, dtype=torch.float)\n",
-    "\n",
-    "print(f\"Basic Transform: {basic_transform}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -254,17 +232,7 @@
     "\n",
     "train_csv = str(Path(\"data/himalayas_data/train/train.csv\"))\n",
     "val_csv   = str(Path(\"data/himalayas_data/val/val.csv\"))\n",
-    "test_csv  = str(Path(\"data/himalayas_data/test/test.csv\"))\n",
-    "\n",
-    "train_dataloader, val_dataloader, test_dataloader = create_dataloaders(\n",
-    "    train_file=train_csv,\n",
-    "    val_file=val_csv,\n",
-    "    test_file=test_csv,\n",
-    "    transform=basic_transform,  \n",
-    "    batch_size=32\n",
-    ")\n",
-    "\n",
-    "train_dataloader, val_dataloader, test_dataloader"
+    "test_csv  = str(Path(\"data/himalayas_data/test/test.csv\"))"
    ]
   }
  ],
