create_dataloders adapted to TabularDataset

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -17,21 +17,7 @@
      "output_type": "stream",
      "text": [
       "torch version: 2.6.0\n",
-      "torchvision version: 0.21.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/aaronserpilin/anaconda3/envs/Python3_Env/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "torchvision version: 0.21.0\n",
       "mlextend version: 0.23.4\n"
      ]
     }
@@ -119,12 +105,12 @@
     "except ImportError:\n",
     "    print(\"[INFO] Couldn't find pandas... installing it\")\n",
     "    !pip install -q pandas\n",
-    "    import pandas as pd"
+    "    import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +119,7 @@
        "'cpu'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +131,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We adjust the PYTHONPATH to keep absolute imports\n",
+    "import sys\n",
+    "sys.path.append(\"src\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -170,45 +167,45 @@
      "output_type": "stream",
      "text": [
       "First 10 rows:\n",
-      "   SEX  CITIZEN  STATUS  MO2USED  MROUTE1  SEASON  O2USED   CALCAGE   HEIGHTM  \\\n",
-      "0    1       81      72        1        1       2       1  1.084601 -1.198266   \n",
-      "1    1      152      72        0        1       2       0  1.513284 -1.198266   \n",
-      "2    0      158      72        0        1       2       1 -0.973077 -0.171140   \n",
-      "3    1      109     264        1        1       0       1 -0.458657  0.989958   \n",
-      "4    1      190      72        1        1       0       1  2.027704 -1.118520   \n",
-      "5    1       15      72        0        1       2       1 -0.201448 -1.198266   \n",
-      "6    1       33      72        1        1       0       1  0.484445  0.989958   \n",
-      "7    0       81     288        1        0       3       1  0.570182  0.989958   \n",
-      "8    1       71      72        1        1       0       1  0.998865  0.989958   \n",
-      "9    1      141      72        0        0       2       0 -0.630130 -1.118520   \n",
+      "  SEX      CITIZEN      STATUS  MO2USED  MROUTE1  SEASON  O2USED  CALCAGE  \\\n",
+      "0   M        Japan     Climber     True        1       3    True       49   \n",
+      "1   M        Spain     Climber    False        1       3   False       54   \n",
+      "2   F  Switzerland     Climber    False        1       3    True       25   \n",
+      "3   M        Nepal  H-A Worker     True        1       1    True       31   \n",
+      "4   M          USA     Climber     True        1       1    True       60   \n",
+      "5   M      Bahrain     Climber    False        1       3    True       34   \n",
+      "6   M        Chile     Climber     True        1       1    True       42   \n",
+      "7   F        Japan      Leader     True        0       4    True       43   \n",
+      "8   M        India     Climber     True        1       1    True       48   \n",
+      "9   M      S Korea     Climber    False        0       3   False       29   \n",
       "\n",
-      "    MDEATHS   HDEATHS  SMTMEMBERS  SMTHIRED  Target  \n",
-      "0 -0.280095 -0.166441    1.659120  0.964336       1  \n",
-      "1 -0.280095 -0.166441   -0.631075 -0.473708       0  \n",
-      "2 -0.280095 -0.166441   -0.631075 -0.617512       0  \n",
-      "3 -0.280095 -0.166441   -0.807244  0.676727       1  \n",
-      "4 -0.280095 -0.166441    0.249769 -0.186099       1  \n",
-      "5 -0.280095 -0.166441    1.482951  5.566078       1  \n",
-      "6 -0.280095 -0.166441   -0.807244 -0.617512       0  \n",
-      "7 -0.280095 -0.166441   -0.807244 -0.617512       0  \n",
-      "8 -0.280095 -0.166441    0.602106  0.964336       1  \n",
-      "9 -0.280095 -0.166441    0.073600 -0.473708       0  \n",
+      "   HEIGHTM  MDEATHS  HDEATHS  SMTMEMBERS  SMTHIRED  Target  \n",
+      "0     8163        0        0          14        11       1  \n",
+      "1     8163        0        0           1         1       0  \n",
+      "2     8485        0        0           1         0       0  \n",
+      "3     8849        0        0           0         9       1  \n",
+      "4     8188        0        0           6         3       1  \n",
+      "5     8163        0        0          13        43       1  \n",
+      "6     8849        0        0           0         0       0  \n",
+      "7     8849        0        0           0         0       0  \n",
+      "8     8849        0        0           8        11       1  \n",
+      "9     8188        0        0           5         1       0  \n",
       "First training instance:\n",
-      "SEX            1.000000\n",
-      "CITIZEN       81.000000\n",
-      "STATUS        72.000000\n",
-      "MO2USED        1.000000\n",
-      "MROUTE1        1.000000\n",
-      "SEASON         2.000000\n",
-      "O2USED         1.000000\n",
-      "CALCAGE        1.084601\n",
-      "HEIGHTM       -1.198266\n",
-      "MDEATHS       -0.280095\n",
-      "HDEATHS       -0.166441\n",
-      "SMTMEMBERS     1.659120\n",
-      "SMTHIRED       0.964336\n",
-      "Target         1.000000\n",
-      "Name: 0, dtype: float64\n",
+      "SEX                 M\n",
+      "CITIZEN         Japan\n",
+      "STATUS        Climber\n",
+      "MO2USED          True\n",
+      "MROUTE1             1\n",
+      "SEASON              3\n",
+      "O2USED           True\n",
+      "CALCAGE            49\n",
+      "HEIGHTM          8163\n",
+      "MDEATHS             0\n",
+      "HDEATHS             0\n",
+      "SMTMEMBERS         14\n",
+      "SMTHIRED           11\n",
+      "Target              1\n",
+      "Name: 0, dtype: object\n",
       "Instance shape:\n",
       "(14,)\n"
      ]
@@ -224,15 +221,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Training set saved to: data/himalayas_data/train/train.csv\n",
+      "[INFO] Validation set saved to: data/himalayas_data/val/val.csv\n",
+      "[INFO] Test set saved to: data/himalayas_data/test/test.csv\n",
+      "[INFO] Himalaya Data has already been processed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(<torch.utils.data.dataloader.DataLoader at 0x318469610>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x31846b310>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x3187c87d0>)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from src.helper_functions import create_dataloaders\n",
+    "from src.data_setup import train_dataloader, val_dataloader, test_dataloader\n",
     "\n",
-    "train_csv = str(Path(\"data/himalayas_data/train/train.csv\"))\n",
-    "val_csv   = str(Path(\"data/himalayas_data/val/val.csv\"))\n",
-    "test_csv  = str(Path(\"data/himalayas_data/test/test.csv\"))"
+    "train_dataloader, val_dataloader, test_dataloader"
    ]
   }
  ],
