Added SAINT and sep_MLP

--- a/main.ipynb
+++ b/main.ipynb
@@ -252,6 +252,40 @@
     "\n",
     "train_dataloader, val_dataloader, test_dataloader"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Categorical instance: tensor([  0,   1, 123, 181,   0,   0,   0,   1])\n",
+      "Categorical instance shape: torch.Size([8])\n",
+      "\n",
+      "Continuous instance: tensor([-0.3729,  0.1510, -0.2801, -0.1664, -0.1026, -0.6175])\n",
+      "Continuous instance shape: torch.Size([6])\n",
+      "\n",
+      "Label instance: 0\n",
+      "Label instance shape: torch.Size([])\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat_batch, cont_batch, label_batch, cat_mask_batch, cont_mask_batch = next(iter(train_dataloader))\n",
+    "\n",
+    "# First instance\n",
+    "cat_instance = cat_batch[0]\n",
+    "cont_instance = cont_batch[0]\n",
+    "label_instance = label_batch[0]\n",
+    "\n",
+    "print(f\"Categorical instance: {cat_instance}\\nCategorical instance shape: {cat_instance.shape}\\n\")\n",
+    "print(f\"Continuous instance: {cont_instance}\\nContinuous instance shape: {cont_instance.shape}\\n\")\n",
+    "print(f\"Label instance: {label_instance}\\nLabel instance shape: {label_instance.shape}\\n\")\n"
+   ]
   }
  ],
  "metadata": {
