Solved circular imports, and began SAINT model initialization debugging

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,8 @@
      "text": [
       "torch version: 2.6.0\n",
       "torchvision version: 0.21.0\n",
-      "mlextend version: 0.23.4\n"
+      "mlextend version: 0.23.4\n",
+      "[INFO] Couldn't find einops... installing it\n"
      ]
     }
    ],
@@ -105,12 +106,19 @@
     "except ImportError:\n",
     "    print(\"[INFO] Couldn't find pandas... installing it\")\n",
     "    !pip install -q pandas\n",
-    "    import pandas as pd\n"
+    "    import pandas as pd\n",
+    "\n",
+    "try:\n",
+    "    from einops import rearrange, repeat\n",
+    "except ImportError:\n",
+    "    print(\"[INFO] Couldn't find einops... installing it\")\n",
+    "    !pip install -q einops\n",
+    "    from einops import rearrange, repeat\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +127,7 @@
        "'cpu'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -221,19 +229,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] Training set saved to: data/himalayas_data/train/train.csv\n",
-      "[INFO] Validation set saved to: data/himalayas_data/val/val.csv\n",
-      "[INFO] Test set saved to: data/himalayas_data/test/test.csv\n",
-      "[INFO] Himalaya Data has already been processed\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -242,7 +240,7 @@
        " <torch.utils.data.dataloader.DataLoader at 0x3187c87d0>)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,20 +253,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Categorical instance: tensor([  0,   1, 123, 181,   0,   0,   0,   1])\n",
+      "Categorical instance: tensor([ 0,  1, 68, 60,  1,  1,  0,  1])\n",
       "Categorical instance shape: torch.Size([8])\n",
       "\n",
-      "Continuous instance: tensor([-0.3729,  0.1510, -0.2801, -0.1664, -0.1026, -0.6175])\n",
+      "Continuous instance: tensor([-1.4875,  0.9899, -0.2801, -0.1664,  1.3068,  1.2519])\n",
       "Continuous instance shape: torch.Size([6])\n",
       "\n",
-      "Label instance: 0\n",
+      "Label instance: 1\n",
       "Label instance shape: torch.Size([])\n",
       "\n"
      ]
@@ -284,7 +282,47 @@
     "\n",
     "print(f\"Categorical instance: {cat_instance}\\nCategorical instance shape: {cat_instance.shape}\\n\")\n",
     "print(f\"Continuous instance: {cont_instance}\\nContinuous instance shape: {cont_instance.shape}\\n\")\n",
-    "print(f\"Label instance: {label_instance}\\nLabel instance shape: {label_instance.shape}\\n\")\n"
+    "print(f\"Label instance: {label_instance}\\nLabel instance shape: {label_instance.shape}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 215, 372, 2, 5, 4, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.tab_transformer.tab_train import train_step\n",
+    "from src.tab_transformer.tab_model import SAINT\n",
+    "from src.data_setup import continuous_columns, categorical_columns\n",
+    "import numpy as np\n",
+    "\n",
+    "cat_dims = [len(np.unique(df_train[col])) for col in categorical_columns]\n",
+    "print(cat_dims)\n",
+    "\n",
+    "# Hyperparameter selection based on default original architecture instantiation\n",
+    "# model = SAINT(\n",
+    "#     categories = tuple(x), \n",
+    "#     num_continuous = len(continuous_columns),                \n",
+    "#     dim = 32,                           \n",
+    "#     dim_out = 1,                       \n",
+    "#     depth = 6,                       \n",
+    "#     heads = 8,                         \n",
+    "#     attn_dropout = 0.1,             \n",
+    "#     ff_dropout = 0.1,                  \n",
+    "#     mlp_hidden_mults = (4, 2),       \n",
+    "#     cont_embeddings = 'MLP',\n",
+    "#     attentiontype = 'colrow',\n",
+    "#     final_mlp_style = 'sep',\n",
+    "#     y_dim = 2 # Binary classification\n",
+    "# )"
    ]
   }
  ],
