Fixed model instantiation (took embarrassingly long)

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -17,9 +17,22 @@
      "output_type": "stream",
      "text": [
       "torch version: 2.6.0\n",
-      "torchvision version: 0.21.0\n",
-      "mlextend version: 0.23.4\n",
-      "[INFO] Couldn't find einops... installing it\n"
+      "torchvision version: 0.21.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/aaronserpilin/anaconda3/envs/Python3_Env/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mlextend version: 0.23.4\n"
      ]
     }
    ],
@@ -118,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +140,7 @@
        "'cpu'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -229,18 +242,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Training set saved to: data/himalayas_data/train/train.csv\n",
+      "[INFO] Validation set saved to: data/himalayas_data/val/val.csv\n",
+      "[INFO] Test set saved to: data/himalayas_data/test/test.csv\n",
+      "[INFO] Himalaya Data has already been processed\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(<torch.utils.data.dataloader.DataLoader at 0x318469610>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x31846b310>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x3187c87d0>)"
+       "(<torch.utils.data.dataloader.DataLoader at 0x31dd72790>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x31dd71e90>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x166765d90>)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,20 +276,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Categorical instance: tensor([ 0,  1, 68, 60,  1,  1,  0,  1])\n",
+      "Categorical instance: tensor([  0,   1, 147,  60,   0,   1,   2,   0])\n",
       "Categorical instance shape: torch.Size([8])\n",
       "\n",
-      "Continuous instance: tensor([-1.4875,  0.9899, -0.2801, -0.1664,  1.3068,  1.2519])\n",
+      "Continuous instance: tensor([ 0.2272, -1.1185, -0.2801, -0.1664, -0.8072, -0.6175])\n",
       "Continuous instance shape: torch.Size([6])\n",
       "\n",
-      "Label instance: 1\n",
+      "Label instance: 0\n",
       "Label instance shape: torch.Size([])\n",
       "\n"
      ]
@@ -287,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -304,25 +327,26 @@
     "from src.data_setup import continuous_columns, categorical_columns\n",
     "import numpy as np\n",
     "\n",
+    "# Returns the amount of unique values per categorical column\n",
     "cat_dims = [len(np.unique(df_train[col])) for col in categorical_columns]\n",
     "print(cat_dims)\n",
     "\n",
     "# Hyperparameter selection based on default original architecture instantiation\n",
-    "# model = SAINT(\n",
-    "#     categories = tuple(x), \n",
-    "#     num_continuous = len(continuous_columns),                \n",
-    "#     dim = 32,                           \n",
-    "#     dim_out = 1,                       \n",
-    "#     depth = 6,                       \n",
-    "#     heads = 8,                         \n",
-    "#     attn_dropout = 0.1,             \n",
-    "#     ff_dropout = 0.1,                  \n",
-    "#     mlp_hidden_mults = (4, 2),       \n",
-    "#     cont_embeddings = 'MLP',\n",
-    "#     attentiontype = 'colrow',\n",
-    "#     final_mlp_style = 'sep',\n",
-    "#     y_dim = 2 # Binary classification\n",
-    "# )"
+    "model = SAINT(\n",
+    "    categories = tuple(cat_dims), \n",
+    "    num_continuous = len(continuous_columns),                \n",
+    "    dim = 32,                           \n",
+    "    dim_out = 1,                       \n",
+    "    depth = 6,                       \n",
+    "    heads = 8,                         \n",
+    "    attn_dropout = 0.1,             \n",
+    "    ff_dropout = 0.1,                  \n",
+    "    mlp_hidden_mults = (4, 2),       \n",
+    "    cont_embeddings = 'MLP',\n",
+    "    attentiontype = 'colrow',\n",
+    "    final_mlp_style = 'sep',\n",
+    "    y_dim = 2 # Binary classification\n",
+    ")"
    ]
   }
  ],
